crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@if_else_statements_in_cairo_m___if_else.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: If-Else Statements in Cairo-M - If-Else"
input_file: mdtest/02-control-flow/01-if-else.md
---
Source:
fn choose(selector: felt) -> felt {
    if selector == 0 {
        return 10;
    } else {
        return 20;
    }
}
============================================================
Generated MIR:
module {
  // Function 0
  fn choose {
    parameters: [0]
    entry: 0

    0:
      if %0 then jump 2 else jump 1

    1:
      return 10

    2:
      return 20

  }

}
